[package]
name = "alvarium-annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.40"
ulid = "1.0.0"
chrono = "0.4.22"
async-trait = "0.1.68"
once_cell = "1.19"