[package]
name = "alvarium-annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
thiserror = "2.0.3"
ulid = "1.1.3"
chrono = "0.4.38"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.41", features = ["full"]}